force-app/main/default/objects/Procedure__c/Procedure__c.object-meta.xml
<CustomObject>
    <label>Procedure</label>
    <nameField>
        <displayFormat>PROC-{00000000}</displayFormat>
        <label>Procedure ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>