force-app/main/default/objects/Procedure__c/fields/Performed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Performed_DateTime__c</fullName>
    <label>Performed Date/Time</label>
    <type>DateTime</type>
</CustomField>