force-app/main/default/objects/Procedure__c/fields/Performer__c.field-meta.xml
<CustomField>
    <fullName>Performer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performer</label>
    <referenceTo>Practitioner__c</referenceTo>
    <relationshipLabel>Procedures</relationshipLabel>
    <relationshipName>Procedures</relationshipName>
    <type>Lookup</type>
</CustomField>