force-app/main/default/objects/Procedure__c/fields/Procedure_Code__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Code__c</fullName>
    <label>Procedure Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>