force-app/main/default/objects/Procedure__c/fields/Procedure_Code_System__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Code_System__c</fullName>
    <description>Typical code systems for procedures are SNOMED and CPT. Global value set defaults are package-wide, so they are not marked default on LogicEMR_Code_System.</description>
    <label>Procedure Code System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LogicEMR_Code_System</valueSetName>
    </valueSet>
</CustomField>