force-app/main/default/objects/Procedure__c/fields/Procedure_Ref__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Canonical Code Reference. Procedure_Display__c and Procedure_Code__c remain snapshot fields populated at selection.</description>
    <label>Procedure</label>
    <referenceTo>Code_Reference__c</referenceTo>
    <relationshipLabel>Procedures</relationshipLabel>
    <relationshipName>Procedures</relationshipName>
    <type>Lookup</type>
</CustomField>