force-app/main/default/objects/Procedure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Procedure_Display__c</columns>
    <columns>Procedure_Code__c</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>Performed_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>