force-app/main/default/objects/Procedure__c/listViews/Completed_Procedures.listView-meta.xml
<ListView>
    <fullName>Completed_Procedures</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Procedure_Display__c</columns>
    <columns>Procedure_Code__c</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>Performed_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Procedures</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>